@@ -17,6 +17,7 @@
 	- Added "copy to clipboard" action in interface tab
 	- Double click in MIB explorer walk results selects OID in tree
 	- Fixed status indicator update problems in object browser
+	- Fixed dashboard navigator refresh issues
 - Added commands "get" and "set" to nxdbmgr to manager server configuration
   variables
 - New NXSL function: RenameObject
